<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sarahdev.chinesecheckers.start.StartActivity">

    <item
        android:id="@+id/menu_profil"
        android:icon="@drawable/persofille50"
        android:title="@string/profile" />
    <item
        android:id="@+id/menu_rules"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/rules_of_game" />
    <item
        android:id="@+id/menu_scores"
        android:icon="@drawable/gagnant100"
        android:title="@string/_scores" />
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings" />
</menu>