<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal|center_vertical"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".start.StartActivity">

    <TextView
        android:id="@+id/textSettings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:background="@color/secondaryColor"
        android:contentDescription="@string/profile"
        android:fontFamily="@font/chelsea_market"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/r_glages"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="12dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/chelsea_market"
                android:text="@string/vitesse_de_d_placement"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewSpeedRep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/chelsea_market"
                android:text="@string/normalSpeed"
                android:textAlignment="center"
                android:textColor="@color/secondaryColorDark"
                android:textSize="12sp" />

            <SeekBar
                android:id="@+id/seekBarDelay"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="5dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewrapide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/chelsea_market"
                    android:text="@string/rapide"
                    android:textColor="@color/secondaryColorDark" />

                <Space
                    android:layout_width="150dp"
                    android:layout_height="10dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/textViewlent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/chelsea_market"
                    android:text="@string/lent"
                    android:textColor="@color/secondaryColorDark" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/chelsea_market"
                android:text="@string/autoriser_l_affichage_de_l_aide"
                android:textColor="@color/black" />


        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/okProfile"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|right"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ripple_oval"
        android:backgroundTint="#CDDC39"
        android:contentDescription="@string/ok"
        android:elevation="8dp"
        android:src="@drawable/ic_done_grey600_24dp" />

</LinearLayout>
