<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fond">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ImageButton
        android:id="@+id/btnRulesback"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_gravity="bottom|left"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ripple_oval"
        android:contentDescription="@string/button_back"
        android:elevation="8dp"
        android:onClick="onClick_START"
        android:src="@drawable/ic_arrow_back_grey600" />

    <TextView
        android:id="@+id/titleRules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginBottom="12dp"
        android:background="@color/primaryColorLight"
        android:contentDescription="@string/rules"
        android:fontFamily="@font/chelsea_market"
        android:paddingStart="60dp"
        android:paddingTop="5dp"
        android:paddingBottom="16dp"
        android:text="@string/rules"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleRules"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/tvRules1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/chelsea_market"
                android:text="@string/rules1"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/game70" />

            <TextView
                android:id="@+id/tvRules2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/chelsea_market"
                android:paddingTop="16dp"
                android:text="@string/rules2"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvRules3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/chelsea_market"
                android:paddingTop="16dp"
                android:text="@string/rules3"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvRules4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:fontFamily="@font/chelsea_market"
                            android:foregroundGravity="center"
                            android:paddingStart="12dp"
                            android:paddingTop="12dp"
                            android:paddingEnd="12dp"
                            android:paddingBottom="2dp"
                            android:text="@string/rules4"
                            android:textAlignment="center"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tvRules5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:fontFamily="@font/chelsea_market"
                            android:foregroundGravity="center"
                            android:paddingStart="12dp"
                            android:paddingTop="2dp"
                            android:paddingEnd="12dp"
                            android:paddingBottom="12dp"
                            android:text="@string/rules5"
                            android:textAlignment="center"
                            android:textSize="16sp" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/image_i_don_t_understand"
                    app:srcCompat="@drawable/not_clear" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>