<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/secondaryColor"
    android:orientation="vertical"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:elevation="10dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/gameImage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="false"
                android:layout_alignParentBottom="false"
                android:layout_gravity="start"
                android:layout_margin="6dp"
                android:layout_marginTop="16dp"
                android:layout_toStartOf="@+id/tvWinner"
                android:layout_toLeftOf="@+id/tvWinner"
                android:background="@color/white"
                android:contentDescription="@string/winner"
                android:padding="6dp"
                android:scaleType="centerCrop"
                android:soundEffectsEnabled="false"
                tools:srcCompat="@drawable/game70" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <TextView
                    android:id="@+id/textGetBack1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/chelsea_market_regular"
                    android:paddingRight="8dp"
                    android:text="@string/une_partie_est_en_cours"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <TextView
                    android:id="@+id/textGetBack2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/chelsea_market_regular"
                    android:text="Souhaitez-vous :"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOKGetBack"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:backgroundTint="@color/secondaryColorDark"
            android:fontFamily="@font/chelsea_market_regular"
            android:text="@string/reprendre_la_partie"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnNewGame"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:backgroundTint="@color/secondaryColorDark"
            android:fontFamily="@font/chelsea_market_regular"
            android:text="@string/nouvelle_partie"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>