<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/winnerLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/secondaryColor"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/winnerImage3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="false"
            android:layout_alignParentBottom="false"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:layout_toStartOf="@+id/tvWinner"
            android:layout_toLeftOf="@+id/tvWinner"
            android:background="@color/white"
            android:contentDescription="@string/winner"
            android:padding="6dp"
            android:scaleType="centerCrop"
            android:soundEffectsEnabled="false"
            tools:srcCompat="@drawable/winner100" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_weight="1"
            android:fontFamily="@font/chelsea_market"
            android:paddingStart="18dp"
            android:text="ordre des arrivées :"
            android:textAlignment="textStart"
            android:textSize="20sp" />
    </LinearLayout>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:elevation="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linearLayoutWinners"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnScores2"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_oval"
            android:backgroundTint="#FFC107"
            android:tint="@null"
            app:layout_anchorGravity="bottom|right|end"
            app:srcCompat="@drawable/podium50" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPlayAgain2"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:backgroundTint="@color/secondaryColorDark"
            android:fontFamily="@font/chelsea_market_regular"
            android:text="@string/play_again"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnExit2"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:backgroundTint="@color/secondaryColorDark"
            android:fontFamily="@font/chelsea_market_regular"
            android:text="@string/exit"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>